# mitchells-ineffable-rules

./: .gitignore  Dockerfile  README.md  pre-commit-hook.sh  pre-push-hook.sh  pyproject.toml
.agents/: AGENTS.md
docs/: README.md  custom_rules.md  java.md  publishing.md  sql.md  xml.md
docs/sql/: README.md
docs/sql/rules/: IR-alias-as.md  IR-between.md  IR-blank-lines.md  IR-boolean-comparison.md  IR-case-when-when.md  IR-case.md  IR-clause-alignment.md  IR-column-layout.md  IR-count-star.md  IR-create-view-indent.md  IR-cte-format.md  IR-distinct-parentheses.md  IR-duplicate-content.md  IR-empty-command.md  IR-eof-newline.md  IR-from-multi.md  IR-from-single.md  IR-function-case.md  IR-in-exists.md  IR-indent.md  IR-is-null-space.md  IR-is-null.md  IR-join-and.md  IR-join-format.md  IR-join-null-coalesce.md  IR-join-on-multi.md  IR-join-parens.md  IR-keyword-case.md  IR-line-length.md  IR-null-coalesce.md  IR-operator-spacing.md  IR-paren-content-indent.md  IR-paren-multi.md  IR-paren-same-op.md  IR-paren-single.md  IR-redundant-keywords.md  IR-select-comma.md  IR-subquery-compact.md  IR-subquery-indent.md  IR-table-alias-as.md  (+3 more)
docs/xml/: README.md
mir/: main.py
mir/engine/: config.py  disabler.py  embedded_bridge.py  rule_interface.py  rules_help.py  rules_loader.py  runner.py
mir/rules/java/: __init__.py
mir/rules/sql/: __init__.py  alias_as.py  as_spacing.py  between.py  indent.py  (+71 more)
scripts/: update_readme.py
tests/: README.md  test_config.py  test_disabler.py  test_dynamic_loader.py  test_meta_rules.py  test_runner.py  test_statement_blank_lines.py
(+67 files in other folders)
